--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://static.vecteezy.com/system/resources/previews/009/651/691/original/minimalist-modern-bs-letter-logo-vector.jpg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MERN Blog App</title>
   </head>
